--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -5,67 +5,38 @@
   threshold: 100%
   filters:
     anime_ids:
-    - 30
-    - 32
-    - 68
-    - 114
-    - 121
-    - 145
-    - 151
-    - 154
-    - 205
-    - 270
-    - 271
-    - 276
-    - 306
-    - 322
-    - 327
-    - 464
-    - 974
-    - 978
-    - 1022
-    - 1138
-    - 1312
-    - 1413
-    - 1424
-    - 1437
-    - 1439
-    - 1845
-    - 1980
-    - 2001
-    - 3080
-    - 3228
-    - 3784
-    - 3785
-    - 4103
-    - 4107
-    - 4334
-    - 4565
-    - 4581
-    - 5034
-    - 6172
-    - 6675
     - 8337
-    - 8795
-    - 8915
-    - 8934
-    - 10278
-    - 10372
-    - 11285
-    - 13203
-    - 15061
+    - 6675
+    - 3785
+    - 3784
+    - 1845
+    - 464
+    - 121
+    - 1424
+    - 271
+    - 1980
+    - 276
+    - 1413
+    - 1437
+    - 1158
+    - 1439
+    - 32
+    - 30
     - 16774
-    - 18679
-    - 21659
-    - 23605
-    - 28149
-    - 32023
+    - 3080
+    - 11285
+    - 2001
     - 32681
-    - 33489
-    - 35849
+    - 28149
+    - 21659
+    - 18679
+    - 8795
+    - 974
   metadata:
     title_ru: Хироюки Имаиси
     title_en: Hiroyuki Imaishi
+    image: https://nyaa.shikimori.one/system/user_images/original/34807/818435.jpg
+    border_color: "#D5713F"
     topic_id: 276032
   generator:
     person_id: 2349
@@ -75,61 +46,45 @@
   threshold: 100%
   filters:
     anime_ids:
-    - 1
-    - 5
-    - 30
-    - 43
-    - 71
-    - 165
-    - 202
-    - 205
-    - 345
-    - 442
-    - 499
-    - 570
-    - 598
-    - 617
-    - 691
-    - 801
-    - 853
     - 936
+    - 570
+    - 5
+    - 43
+    - 30
     - 998
-    - 1023
-    - 1107
-    - 1138
-    - 1247
-    - 1352
-    - 1371
-    - 1462
-    - 1825
-    - 1879
+    - 617
+    - 4876
     - 1925
-    - 2025
-    - 2770
+    - 499
+    - 3014
+    - 3889
+    - 1371
     - 2998
     - 2999
-    - 3014
+    - 1107
     - 3115
-    - 3363
-    - 3588
-    - 3673
-    - 3889
-    - 3958
-    - 4182
-    - 4511
-    - 4876
-    - 5356
-    - 6573
-    - 9289
-    - 9919
     - 14283
-    - 17269
-    - 20973
-    - 23755
+    - 1879
+    - 1825
     - 32245
+    - 23755
+    - 20973
+    - 9919
+    - 6573
+    - 4182
+    - 2025
+    - 1247
+    - 442
+    - 1023
+    - 202
+    - 598
+    - 1138
+    - 1462
   metadata:
     title_ru: Тэнсай Окамура
     title_en: Tensai Okamura
+    image: https://moe.shikimori.org/system/user_images/original/34807/819632.jpg
+    border_color: "#AEA9DE"
     topic_id: 276032
   generator:
     person_id: 2762
