--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3831,3 +3831,21 @@
   filters: *410
   threshold: 0.01
   metadata: *411
+
+- neko_id: black_lagoon
+  level: 1
+  algo: duration
+  filters: &410
+    franchise: black_lagoon
+  threshold: 100%
+  metadata: &411
+    title_ru: Пираты «Чёрной лагуны»
+    title_en: Black Lagoon
+    image: https://kawai.shikimori.one/system/user_images/original/239508/828461.jpg
+    topic_id: 247360
+- neko_id: haou_daikei_ryuu_knight
+  level: 0
+  algo: duration
+  filters: *410
+  threshold: 0.01
+  metadata: *411
