--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3832,17 +3832,11 @@
 - neko_id: black_lagoon
   level: 1
   algo: duration
-  filters: &410
+  filters:
     franchise: black_lagoon
   threshold: 100%
-  metadata: &411
+  metadata:
     title_ru: Пираты «Чёрной лагуны»
     title_en: Black Lagoon
     image: https://kawai.shikimori.one/system/user_images/original/239508/828461.jpg
     topic_id: 247360
-- neko_id:black_lagoon
-  level: 0
-  algo: duration
-  filters: *410
-  threshold: 0.01
-  metadata: *411
