--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3851,3 +3851,23 @@
   filters: *413
   threshold: 0.01
   metadata: *414
+- neko_id: koihime_musou
+  level: 1
+  algo: duration
+  filters: &413
+    franchise: koihime_musou
+    not_anime_ids:
+    - 15015
+    - 15095
+  threshold: 100%
+  metadata: &414
+    title_ru: Несравненная принцесса любви
+    title_en: Shin Koihime†Musou
+    image: https://nyaa.shikimori.one/system/user_images/original/9560/833670.jpg
+    topic_id: 247360
+- neko_id: koihime_musou
+  level: 0
+  algo: duration
+  filters: *413
+  threshold: 0.01
+  metadata: *414
