--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1007,7 +1007,7 @@
   algo: duration
   filters: &105
     franchise: natsume_yuujinchou
-  threshold: 91.9%
+  threshold: 95%
   metadata: &106
     title_ru: Тетрадь дружбы Нацумэ
     title_en: Natsume Yuujinchou
@@ -3958,22 +3958,22 @@
   filters: *428
   threshold: 0.01
   metadata: *429
-- neko_id: dungeon_ni_deai_wo_motomeru_no_wa_machigatteiru_darou_ka
+- neko_id: danmachi
   level: 1
   algo: duration
-  filters: &408
-    franchise: dungeon_ni_deai_wo_motomeru_no_wa_machigatteiru_darou_ka
+  filters: &430
+    franchise: danmachi
     not_anime_ids:
     - 40064
-  threshold: 80%
-  metadata: &409
+  threshold: 98%
+  metadata: &431
     title_ru: Может, я встречу тебя в подземелье?
     title_en: DanMachi
-    image: https://dere.shikimori.one/system/user_images/original/47216/866994.jpg
+    image: "/assets/achievements/anime/franchise/danmachi.jpg"
     topic_id: 247360
-- neko_id: dungeon_ni_deai_wo_motomeru_no_wa_machigatteiru_darou_ka
+- neko_id: danmachi
   level: 0
   algo: duration
-  filters: *408
+  filters: *430
   threshold: 0.01
-  metadata: *409
+  metadata: *431
