--- a/.deliver/config
+++ b/.deliver/config
@@ -10,3 +10,13 @@ BUILD_AT="/tmp/edeliver/neko/builds"
 PRODUCTION_HOSTS="88.198.7.116"
 PRODUCTION_USER="neko"
 DELIVER_TO="/home/apps"
+
+post_extract_release_archive() {
+  status "Removing start_erl.data"
+  __remote "
+    [ -f ~/.profile ] && source ~/.profile
+    set -e
+    cd $DELIVER_TO/$APP/var $SILENCE
+    rm start_erl.data
+  "
+}
