--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -1787,7 +1787,7 @@
   metadata:
     title_ru: Мари Окада
     title_en: Mari Okada
-    image: https://nyaa.shikimori.one/system/user_images/original/34807/870245.jpg
+    image: "/assets/achievements/anime/author/mari_okada.jpg"
     border_color: "#FAEEDD"
     topic_id: 276032
   generator:
