--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -197,6 +197,8 @@
     - 33360
     - 34438
     - 40334
+    - 40315
+    - 9591
   threshold: 93.6%
   metadata: &20
     title_ru: Код Гиас
@@ -2955,6 +2957,11 @@
   algo: duration
   filters: &317
     franchise: senki_zesshou_symphogear
+    not_anime_ids:
+    - 36692
+    - 32151
+    - 36692
+    - 40659
   threshold: 94.6%
   metadata: &318
     title_ru: Песня боевых принцесс
@@ -3031,7 +3038,7 @@
   threshold: 100%
   metadata: &327
     title_ru: Красавцы из клуба защитников Земли
-    title_en: Binan Koukou Chikyuu Boueibu LOVE!
+    title_en: Binan Koukou Chikyuu Boueibu 
     image: "/assets/achievements/anime/franchise/binan_koukou_chikyuu_boueibu_love.jpg"
     topic_id: 247360
 - neko_id: binan_koukou_chikyuu_boueibu_love
@@ -3371,6 +3378,11 @@
   algo: duration
   filters: &366
     franchise: maria_sama
+    not_anime_ids:
+    - 3468
+    - 3469
+    - 2954
+    - 6299
   threshold: 96.7%
   metadata: &367
     title_ru: Дева Мария смотрит за вами
