--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -1703,7 +1703,7 @@
   metadata:
     title_ru: Ёсиюки Томино
     title_en: Yoshiyuki Tomino
-    image: https://kawai.shikimori.one/system/user_images/original/210/941396.jpg
+    image: "/assets/achievements/anime/author/yoshiyuki_tomino.jpg"
     border_color: "#6495ED"
     topic_id: 276032
   generator:
