rollback name change

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1096,7 +1096,7 @@
     - 39738
   threshold: 92.6%
   metadata: &115
-    title_ru: Знаток муси
+    title_ru: Мастер муси
     title_en: Mushishi
     image: "/assets/achievements/anime/franchise/mushishi.png"
     topic_id: 247360
